# fastapi-service-template

./: .commitlintrc.yaml  .coveragerc  .env.test  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  alembic.ini  pyproject.toml  run.py
main/: __init__.py  _app.py  _config.py  _db.py  enums.py
main/commons/: error_handlers.py  exceptions.py
main/controllers/: _router.py  items.py  probe.py
main/engines/: items.py
main/libs/: log.py
main/middlewares/: __init__.py  access_log.py  db.py
main/models/: __init__.py  base.py  item.py  log.py
main/schemas/: base.py  exceptions.py
migrations/: env.py
migrations/versions/: 202305051805-3c81d3ba573d_.py  202305222002-df8e6b5e1bc9_.py
scripts/: install_git_hooks.sh
tests/: conftest.py  test_db.py
tests/controllers/: test_items.py  test_probe.py
tests/engines/: test_log.py
